--- a/src/web-app/app/heroes/list/hero-list.component.html
+++ b/src/web-app/app/heroes/list/hero-list.component.html
@@ -8,12 +8,14 @@
   </button>
 </div>
 <mat-list>
-  <mat-list-item *ngFor="let hero of heroes" routerLink="/detail/{{hero.id}}">
+  <mat-list-item *ngFor="let hero of heroes" [class.selected]="hero.id === selectedId">
     <mat-icon color="primary">arrow_upward</mat-icon>
     <mat-icon color="accent">arrow_downward</mat-icon>
-      {{"&nbsp;"+hero.name}}
+    {{"&nbsp;"+hero.name}}
     <span class="fill-remaining-space"></span>
     <mat-icon (click)="delete(hero)">delete</mat-icon>
     <mat-divider></mat-divider>
   </mat-list-item>
 </mat-list>
+
+<button routerLink="/sidekicks">Go to sidekicks</button>
