Link all created modules into app.module

--- a/src/web-app/app/app.component.html
+++ b/src/web-app/app/app.component.html
@@ -1,8 +1,7 @@
-
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <button mat-raised-button color="secondary" routerLink="/dashboard">Dashboard</button>
-    <button mat-raised-button color="secondary" routerLink="/heroes">Heroes</button>
+    <button mat-raised-button color="secondary" routerLink="/heroes/dashboard">Dashboard</button>
+    <button mat-raised-button color="secondary" routerLink="/heroes/list">Heroes</button>
     <span class="fill-remaining-space"></span>
 
     <app-hero-search></app-hero-search>
