Add Heroes mock request

--- a/src/web-app/app/heroes/dashboard/hero-dashboard.component.html
+++ b/src/web-app/app/heroes/dashboard/hero-dashboard.component.html
@@ -1,7 +1,7 @@
 <h3>Top Heroes</h3>
 
 <mat-grid-list cols="4" rowHeight="100px">
-  <mat-grid-tile *ngFor="let hero of heroes" [colspan]="1" [rowspan]="1" [style.background]="hero.getColor()">
+  <mat-grid-tile *ngFor="let hero of heroes" routerLink="/heroes/{{hero.id}}" [colspan]="1" [rowspan]="1" [style.background]="hero.getColor()">
 
     <h2>{{hero.name}}</h2>
   </mat-grid-tile>
